# GMAT-Automation

./: .gitignore  GMAT Automation Software User Manual.docx  Include_MissionDefinitions.script  Include_StaticDefinitions.script  ModelMissionTemplate.script  README-dependencies.md  README-dependencies.txt  README.md  README.txt  Vehicle Optimization Tables JS&R_R4.xlsx  Vehicle Optimization Tables JS&R_R7.xlsx  Vehicle Optimization Tables JS&R_large.xlsx  Vehicle Optimization Tables JS&R_small.xlsx  Vehicle Optimization Tables JS&R_smaller.xlsx  fromconfigsheet.py  gmat_batcher.py  modelgen.py  modelpov.py  mp case elapsed time.txt  setup.cfg  setup.py
docs/: GMATAutomation_SoftwareUserManual.docx
gmatautomation/: __init__.py
gmatautomation/gmatautomation.egg-info/: PKG-INFO
gmatautomation/modelcontrol/: __init__.py
gmatautomation/modelgen/: __init__.py  fromconfigsheet.py  gmatlocator.py  modelgen.py
gmatautomation/reportgen/: CleanUpData.py  CleanUpReports.py  ContactReports.py  DownlinkCapacity.py  LinkBudgets.py  LinkReports.py  __init__.py  batch_alfano_rep.py  reduce_report.py
modelcontrol/: __init__.py  gmat_batcher.py  reduce_report.py
modelgen/: CleanUpData.py  CleanUpReports.py  ContactReports.py  LinkReports.py  fromconfigsheet.py  gmatlocator.py  modelgen.py  modelpov.py  reduce_report.py
reportgen/: CleanUpData.py  batch_alfano_rep.py
src/: __init__.py
src/gmatautomation/: __init__.py
src/gmatautomation/modelcontrol/: __init__.py  (+1 more)
src/modelcontrol/: __init__.py
src/modelgen/: modelgen.py
src/reportgen/: CleanUpData.py  ContactReports.py  __init__.py  reduce_report.py
(+13 files in other folders)
