[metadata]
name = gmatautomation
version = 0.2a1
author = Colin Helms
author_email = colinhelms@outlook.com
description = GMAT model generation, batch execution, and data reduction.
long_description = file: README.md
url = https://github.com/a093130/GMAT-Automation
project_urls =
	Bug Tracker = https://github.com/users/a093130/projects/2
packages=['', 'gmatautomation', 'gmatautomation.modelcontrol', 'gmatautomation.modelgen', 'gmatautomation.reportgen'],
classifiers=
	Development Status :: 1 - Alpha,
	Environment :: Console,
	Intended Audience :: End Users,
	Operating System :: Microsoft :: Windows 10,
	Programming Language :: Python :: 3.4,
	License :: GNU GENERAL PUBLIC LICENSE V3,
	Topic :: Copyright :: Copyright Freelance Rocket Science, 2022

